[tool.poetry]
name = "nflml"
version = "0.1.0"
description = ""
authors = ["colin99d <colin99delahunty@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
torch = "^1.12.0"
torchvision = "^0.13.0"
typer = "^0.6.1"
pytorch-forecasting = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
